[package]
name = "gfe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = {version = "0.12.1", features = ["tokio", "debug"]}
tokio = {version = "1.36.0", features = ["fs"]}
rfd = "0.14.0"
smol_str = "0.2.1"
iced_native = "0.10.3"
iced_wgpu = "0.12.1"